<resources>
    <string name="app_name">Kangaroof</string>

    <!--主页功能-->
    <string name="main_func_1">天气预报</string>
    <string name="main_func_2">穿搭知识库</string>
    <string name="main_func_3">飞叶读条</string>
    <string name="main_func_4">更换背景</string>
    <string name="main_func_5">播放视频</string>
    <!--    <string name="main_func_5">特性测试</string>-->
    <!--设置页面Group-->
    <string name="info_settings">个人资料</string>
    <string name="app_settings">应用</string>

    <!--个人资料设置-->
    <string name="info_name">姓名</string>
    <string name="info_area">地区</string>

    <!--应用设置-->
    <string name="black_mode">黑色模式</string>
    <string name="float_window">悬浮窗</string>
    <string name="background_on">后台常驻</string>

</resources>