<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/info_settings">

        <EditTextPreference
            app:key="name"
            app:title="@string/info_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="area"
            app:entries="@array/area_entries"
            app:entryValues="@array/area_values"
            app:key="area"
            app:title="@string/info_area"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_settings">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/black_mode" />

        <SwitchPreferenceCompat
            app:key="float_window"
            app:title="@string/float_window" />

        <SwitchPreferenceCompat
            app:title="@string/background_on" />

    </PreferenceCategory>

</PreferenceScreen>