<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/main_bottom_bg"
            android:layout_width="match_parent"
            android:layout_height="880dp"
            android:src="@drawable/ff_reborn" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appBar"
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsingToolbar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="6dp"
                    android:background="@color/colorPrimary" >
                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/main_button_1"
                        android:gravity="center"
                        android:text="@string/main_func_1"
                        android:background="@color/colorPrimary"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="6dp"
                    android:background="@color/colorPrimary" >
                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/main_button_2"
                        android:gravity="center"
                        android:text="@string/main_func_2"
                        android:background="@color/colorPrimary"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="6dp"
                    android:background="@color/colorPrimary" >
                    <Button
                        android:id="@+id/main_button_3"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:text="@string/main_func_3"
                        android:background="@color/colorPrimary"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/down_icon">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="true" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>