<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smart.refresh.header.ClassicsHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/main_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <View
                android:id="@+id/main_bottom_bg"
                android:layout_width="match_parent"
                android:layout_height="880dp"
                android:background="@color/colorPrimaryDark" />
        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/main_collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ff_reborn"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentScrim="@color/colorPrimaryDark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="20dp"
                            android:background="@color/colorPrimary"
                            app:cardCornerRadius="6dp">

                            <Button
                                android:id="@+id/main_button_1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/main_func_1" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="20dp"
                            android:background="@color/colorPrimary"
                            app:cardCornerRadius="6dp">

                            <Button
                                android:id="@+id/main_button_2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/main_func_2" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="20dp"
                            android:background="@color/colorPrimary"
                            app:cardCornerRadius="6dp">

                            <Button
                                android:id="@+id/main_button_3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/main_func_3" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="20dp"
                            android:background="@color/colorPrimary"
                            app:cardCornerRadius="6dp">

                            <Button
                                android:id="@+id/main_button_4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/main_func_4" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="20dp"
                            android:background="@color/colorPrimary"
                            app:cardCornerRadius="6dp">

                            <Button
                                android:id="@+id/main_button_5"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/main_func_5" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </HorizontalScrollView>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tool_bar_height"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/down_icon">

                    <TextView
                        android:id="@+id/main_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAllCaps="true" />
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.scwang.smart.refresh.header.MaterialHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</com.scwang.smart.refresh.layout.SmartRefreshLayout>
